RESOLVED FIXED 216760
[JSC] Intl spec update: handle awkward rounding behavior
https://bugs.webkit.org/show_bug.cgi?id=216760
Summary [JSC] Intl spec update: handle awkward rounding behavior
Yusuke Suzuki
Reported 2020-09-20 22:09:02 PDT
Attachments
Patch (14.11 KB, patch)
2020-09-20 22:45 PDT, Yusuke Suzuki
no flags
Patch (14.32 KB, patch)
2020-09-20 22:51 PDT, Yusuke Suzuki
no flags
Patch (15.75 KB, patch)
2020-09-23 12:04 PDT, Yusuke Suzuki
ross.kirsling: review+
Yusuke Suzuki
Comment 1 2020-09-20 22:45:36 PDT
Yusuke Suzuki
Comment 2 2020-09-20 22:51:35 PDT
Yusuke Suzuki
Comment 3 2020-09-23 12:04:16 PDT
Yusuke Suzuki
Comment 4 2020-09-23 12:04:30 PDT
Comment on attachment 409494 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=409494&action=review > JSTests/test262/expectations.yaml:1475 > + strict mode: 'Test262Error: Expected a RangeError to be thrown but no exception was thrown at all' Test262 update https://github.com/tc39/test262/pull/2817
Ross Kirsling
Comment 5 2020-09-23 12:09:12 PDT
Comment on attachment 409494 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=409494&action=review r=me, based on the understanding that test262 will be fixed soon. > JSTests/stress/intl-numberformat.js:464 > + let nf = new Intl.NumberFormat('en', { I'd be inclined to ask for a test using a different locale but I guess this issue is more about options than locale anyway.
Yusuke Suzuki
Comment 6 2020-09-23 14:26:14 PDT
Radar WebKit Bug Importer
Comment 7 2020-09-23 14:27:19 PDT
Note You need to log in before you can comment on or make changes to this bug.